src/syntax/parser/snapshots/hebi__syntax__parser__tests__import_stmt-4.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mfrom[0m m import b

invalid indentation
| from m [4;31mimport[0m b


