src/syntax/parser/snapshots/hebi__syntax__parser__tests__loop_stmts-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31mpass[0m


