src/syntax/parser/snapshots/hebi__syntax__parser__tests__loop_stmts-3.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            While(
                While {
                    cond: Literal(
                        Bool(
                            true,
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            While(
                While {
                    cond: Literal(
                        Bool(
                            true,
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
