src/syntax/parser/snapshots/hebi__syntax__parser__tests__loop_stmts-7.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Loop(
                            Infinite(
                                Infinite {
                                    body: [
                                        Expr(
                                            GetVar(
                                                GetVar {
                                                    name: Ident(
                                                        "a",
                                                    ),
                                                },
                                            ),
                                        ),
                                        Expr(
                                            GetVar(
                                                GetVar {
                                                    name: Ident(
                                                        "a",
                                                    ),
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            ),
                        ),
                    ],
                },
            ),
        ),
    ],
}
