src/syntax/parser/snapshots/hebi__syntax__parser__tests__loop_stmts.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
