src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
meta methods may only appear in classes
| fn [4;31mmeta[0m


