src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods-3.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
unknown meta method `unknown`
| fn meta:[4;31munknown[0m


