src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods-4.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
duplicate meta method `str`
| fn [4;31m@str[0m(self): pass


