src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods-5.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
meta methods must take `self`
| fn [4;31m@str[0m(): pass


